--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "author": "Ray Villalobos",
   "license": "ISC",
   "devDependencies": {
-    "@11ty/eleventy": "^0.12.1"
+    "@11ty/eleventy": "^0.12.1",
+    "markdown-it": "^10.0.0",
+    "markdown-it-attrs": "^4.1.0"
   }
 }
